# ChangeLog for app-editors/emacs-cvs
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  18 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
  +emacs-cvs-22.0.95-r3.ebuild, +emacs-cvs-22.0.9999-r7.ebuild,
  +emacs-cvs-23.0.0-r3.ebuild:
  Initial import: unchanged copy from emacs-overlay.
