@@ -2,6 +2,11 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  18 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de> emacs-18.59-r3.ebuild,
+  emacs-21.4-r10.ebuild:
+  Suffix changed from ".emacs-${SLOT}" to "-emacs-${SLOT}" for better
+  compatibility with XEmacs.
+
   18 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de> +emacs-18.59-r3.ebuild,
   +emacs-21.4-r10.ebuild:
   Initial import: unchanged copy from emacs-overlay.
