@@ -3,6 +3,12 @@
 # $Header: $
 
   18 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
+  emacs-cvs-22.0.95-r3.ebuild, emacs-cvs-22.0.9999-r7.ebuild,
+  emacs-cvs-23.0.0-r3.ebuild:
+  Suffix changed from ".emacs-${SLOT}" to "-emacs-${SLOT}" for better
+  compatibility with XEmacs.
+
+  18 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
   +emacs-cvs-22.0.95-r3.ebuild, +emacs-cvs-22.0.9999-r7.ebuild,
   +emacs-cvs-23.0.0-r3.ebuild:
   Initial import: unchanged copy from emacs-overlay.
